Damn it I once again forgor

--- a/src/main/resources/assets/untitledtrollmod/lang/en_us.json
+++ b/src/main/resources/assets/untitledtrollmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-	"entity.untitledtrollmod.sheep_hopper": "Sheep Hopper"
+    "entity.untitledtrollmod.sheep_hopper": "Sheep Hopper",
+    "block.untitledtrollmod.troll_tnt": "Troll TNT"
 }
